- fixed bug in mps reader. Reader now prints OBJSENSE section and tries to generate unique names of constraints
- fixed handling of LOOSE variables in locks heuristic
- fixed upgrade to a varbound constraint if abspower constraint contains a multi-aggregated variable
- fixed numerical issues in boundshift presolver when aggregating integer variables

SCIP version 4.0.1
==================

features
- added parsing functionality to cardinality constraint handler for CIP format
- added command line option '-o' and command 'validatesolve' in interactive shell
  to validate the solution against an external primal and dual reference value.
- allow to relax objective limit in reoptimization in presolved stage
- suppress excessive printing about numerical troubles in LP on default verblevel (high)
- updated Mosek interface to compile with Mosek 8.1, too
- updates GAMS interface to latest version
- new LP interface to Glop (Google OR tools); CMake only

fixed bugs:
- fixed bug in shift and propagate--variable information with a negation transformation is correctly reset after backtracking
- fixed bug in genvbounds propagator when applying a restart after the root node
- fixed unintended behavior of interrupt signal handler inside SCIP copies
- fixed uninitialized values in SCIP's digraph data structure after calling SCIPdigraphResize()
- fixed memory leak in OSiL reader when using SOS constraints
- fixed issue related to SCIPcreateFiniteSolCopy not being able to remove all infinite fixings
- fixed issue in SCIPcopyLimits() w.r.t. soft time limit
- improved handling of infinite values in a primal solution in quadratic and nonlinear constraints
- fixed bug in dynamic resizing of hashtables and hashmaps
- fixed bug in computing violation and cut for certain nonlinear constraints when LP solution is slightly out of bounds
- added workaround for bug in primal simplex of cplex 12.7.1.0 occuring when attempting to solve LPs without rows without presolving